--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>pearl_hacks_live</title>
+    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
+    <title>Pearl Hacks Live</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but pearl_hacks_live doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Pearl Hacks Live doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
